weightが0のとき警告(黄色)追加

--- a/steering.html
+++ b/steering.html
@@ -23,7 +23,7 @@
         <div class="input-collection" id="yuyu">
 
             <div class="data">
-                <p class="name">マシン重量/Weight</p>
+                <p class="name" id="weight_name">マシン重量/Weight</p>
                 <input type="number" value="0" min="0" class="input-Box" id="weight" onchange="change()">
                 <select class="unit" id="wei_unit">
                     <option value="1">kg</option>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="data">
-                <p class="name">ホイール直径/Diameter</p>
+                <p class="name" id="wheel_name">ホイール直径/Diameter</p>
                 <input type="number" value="0" min="0" class="input-Box" id="wheel" onchange="change()">
                 <select class="unit" id="whe_unit">
                     <option value="0.001">mm</option>
@@ -66,7 +66,7 @@
             </div>
 
             <div class="data">
-                <p class="name">移動速度/Speed</p>
+                <p class="name" id="v_name">移動速度/Speed</p>
                 <input type="number" value="0" min="0" class="input-Box" id="v" onchange="change()">
                 <select class="unit" id="v_unit">
                     <option value="1">m/s</option>
