width→widthA width→widthB

--- a/mechanum.html
+++ b/mechanum.html
@@ -89,7 +89,7 @@
 
             <div class="width">
                 <div class="data">
-                    <p class="name" id="widthA_name">車体幅A/Body width</p>
+                    <p class="name" id="widthA_name">車体幅A/Body widthA</p>
                     <input type="number" value="0" min="0" class="input-Box" id="widthA">
                     <select class="unit sp1" id="widthA_unit">
                         <option value="0.001">mm</option>
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="data">
-                    <p class="name" id="widthB_name">車体幅B/Body width</p>
+                    <p class="name" id="widthB_name">車体幅B/Body widthB</p>
                     <input type="number" value="0" min="0" class="input-Box" id="widthB">
                     <select class="unit sp1" id="widthB_unit">
                         <option value="0.001">mm</option>
