メカナムのアイコン変更

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
         <div class="asi-area">
             <h3>足回り/<span>Undercarriage</span> モーターの必要回転数、トルク、出力を計算</h3>
             <div class="contents-block asi">
-                <a href="mechanum.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/メカナム.jpg"> </a>
+                <a href="mechanum.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/メカナムアイコン.jpg"> </a>
                 <p>Mechanum</p>
             </div>
             <div class="contents-block asi">
