--- a/main.html
+++ b/main.html
@@ -20,19 +20,19 @@
         <div class="asi-area">
             <h3>足回り/<span>Undercarriage</span> モーターの必要回転数、トルク、出力を計算</h3>
             <div class="contents-block asi">
-                <a href="mechanum.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/メカナムアイコン.jpg"> </a>
+                <a href="mechanum.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/メカナムアイコン.png"> </a>
                 <p>Mechanum</p>
             </div>
             <div class="contents-block asi">
-                <a href="steering.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/ステアリング.jpg"> </a>
+                <a href="steering.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/ステアリングアイコン.png"> </a>
                 <p>Steering</p>
             </div>
             <div class="contents-block asi">
-                <a href="omuni3.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/三軸オムニ.jpg"> </a>
+                <a href="omuni3.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/オムニ3アイコン.png"> </a>
                 <p>Omuni3</p>
             </div>
             <div class="contents-block asi">
-                <a href="omuni4.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/四軸オムニ.jpg"> </a>
+                <a href="omuni4.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/オムニ4アイコン.png"> </a>
                 <p>Omuni4</p>
             </div>
         </div>
