名前訂正 omuni→omni

--- a/omni3.html
+++ b/omni3.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
     <meta charset="utf-8">
-    <title>設計に便利な計算機</title>
-    <link rel="stylesheet" href="omuni3.css">
+    <title>オムニ計算[3]</title>
+    <link rel="stylesheet" href="omni3.css">
 </head>
 
 <body>
 
     <header>
-        <h1 class="header-logo">オムニ計算[3]/<span>Omuni-Calculation</span></h1>
+        <h1 class="header-logo">オムニ計算[3]/<span>Omni-Calculation</span></h1>
         <ul class="header-list">
             <a href="main.html"><li>トップへ戻る</li></a>
             <li>計算手順</li>
@@ -196,7 +196,7 @@
         <source src="sound/warning1.mp3">
     </audio>
 
-    <script type="text/javascript" src="omuni3.js"></script>
+    <script type="text/javascript" src="omni3.js"></script>
 </body>
 
 </html>
