--- a/omni4.html
+++ b/omni4.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>設計に便利な計算機</title>
-    <link rel="stylesheet" href="omuni4.css">
+    <link rel="stylesheet" href="omni4.css">
 </head>
 
 <body>
