--- a/main.html
+++ b/main.html
@@ -28,12 +28,12 @@
                 <p>Steering</p>
             </div>
             <div class="contents-block asi">
-                <a href="omuni3.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/オムニ3アイコン.png"> </a>
-                <p>Omuni3</p>
+                <a href="omni3.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/オムニ3アイコン.png"> </a>
+                <p>Omni3</p>
             </div>
             <div class="contents-block asi">
-                <a href="omuni4.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/オムニ4アイコン.png"> </a>
-                <p>Omuni4</p>
+                <a href="omni4.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/オムニ4アイコン.png"> </a>
+                <p>Omni4</p>
             </div>
         </div>
 
