メカナムとステアのアイコン触ったらgifを表示するようにした。

--- a/main.html
+++ b/main.html
@@ -19,19 +19,19 @@
 
         <div class="asi-area">
             <h3>足回り/<span>Undercarriage</span> モーターの必要回転数、トルク、出力を計算</h3>
-            <div class="contents-block asi">
+            <div class="contents-block mechanum">
                 <a href="mechanum.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/メカナムアイコン.png"> </a>
                 <p>Mechanum</p>
             </div>
-            <div class="contents-block asi">
+            <div class="contents-block steering">
                 <a href="steering.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/ステアリングアイコン.png"> </a>
                 <p>Steering</p>
             </div>
-            <div class="contents-block asi">
+            <div class="contents-block omni3">
                 <a href="omni3.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/オムニ3アイコン.png"> </a>
                 <p>Omni3</p>
             </div>
-            <div class="contents-block asi">
+            <div class="contents-block omni4">
                 <a href="omni4.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"> <img src="image/オムニ4アイコン.png"> </a>
                 <p>Omni4</p>
             </div>
