--- a/main.html
+++ b/main.html
@@ -37,8 +37,8 @@
             </div>
         </div>
 
-        <div class="other-area">
-            <h3>その他/<span>Other</span></h3>
+        <div class="others-area">
+            <h3>その他/<span>Others</span></h3>
             <div class="contents-block other">
                 <a href="winch.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/ウインチ.jpg"></a>
                 <p>Winch</p>
