計算ページの画像追加(ステアを除く)

--- a/mechanum.html
+++ b/mechanum.html
@@ -16,7 +16,7 @@
 
     <main>
         <div class="mechanum">
-            <img class="mechanum-img" src="image/メカナム計算用画像.jpg">
+            <img class="mechanum-img" src="image/メカナム計算用画像.png">
         </div>
 
         <!--　入力欄　-->
