--- a/omni3.html
+++ b/omni3.html
@@ -18,7 +18,7 @@
 
     <main>
         <div class="mechanum">
-            <img class="mechanum-img" src="image/オムニ3輪計算用画像.jpg">
+            <img class="mechanum-img" src="image/3輪オムニ計算用画像.png">
         </div>
 
         <!--　入力欄　-->
