--- a/main.html
+++ b/main.html
@@ -40,15 +40,15 @@
         <div class="others-area">
             <h3>その他/<span>Others</span></h3>
             <div class="contents-block other">
-                <a href="winch.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/ウインチ.jpg"></a>
+                <a href="winch.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/no_image.png"></a>
                 <p>Winch</p>
             </div>
             <div class="contents-block other">
-                <a herf="rack.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/ラック.jpg"></a>
+                <a herf="rack.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/no_image.png"></a>
                 <p>Rack</p>
             </div>
             <div class="contents-block other">
-                <a herf="air-cylinder.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/エアシリンダー.jpg"></a>
+                <a herf="air-cylinder.html" target="_blank" rel="noopener noreferrer" onclick="menu_click()"><img src="image/no_image.png"></a>
                 <p>Air-cylinder</p>
             </div>
         </div>
