旋回速度変化時の車体幅表示非表示追加

--- a/omni3.html
+++ b/omni3.html
@@ -26,7 +26,7 @@
 
             <div class="data">
                 <p class="name">マシン重量/Weight</p>
-                <input type="number" value="0" min="0" class="input-Box" id="weight" onchange="change()">
+                <input type="number" value="0" min="0" class="input-Box" id="weight">
                 <select class="unit sp1" id="wei_unit">
                     <option value="1">kg</option>
                     <option value="0.001">g</option>
@@ -35,25 +35,25 @@
 
             <div class="data">
                 <p class="name">走行抵抗係数/Running resistance</p> 
-                <input type="number" value="3" min="0" max="100" class="input-Box" id="run_res" onchange="change()">
+                <input type="number" value="3" min="0" max="100" class="input-Box" id="run_res">
                 <p class="unit nor">%</p>
             </div>
 
             <div class="data">
                 <p class="name">機械効率/Mechanical Efficiency</p> 
-                <input type="number" value="80" min="0" max="100" class="input-Box" id="me" onchange="change()">
+                <input type="number" value="80" min="0" max="100" class="input-Box" id="me">
                 <p class="unit nor">%</p>
             </div>
 
             <div class="data">
                 <p class="name">地面の傾き/slope</p> 
-                <input type="number" value="0" min="0" max="90" class="input-Box" id="slope" onchange="change()">
+                <input type="number" value="0" min="0" max="90" class="input-Box" id="slope">
                 <p class="unit nor">°</p>
             </div>
 
             <div class="data">
                 <p class="name">ホイール直径/Diameter</p>
-                <input type="number" value="0" min="0" class="input-Box" id="wheel" onchange="change()">
+                <input type="number" value="0" min="0" class="input-Box" id="wheel">
                 <select class="unit sp1" id="whe_unit">
                     <option value="0.001">mm</option>
                     <option value="0.01">cm</option>
@@ -63,7 +63,7 @@
 
             <div class="data">
                 <p class="name">移動速度[X]/Speed</p>
-                <input type="number" value="0" min="0" class="input-Box" id="v_x" onchange="change()">
+                <input type="number" value="0" min="0" class="input-Box" id="v_x">
                 <select class="unit sp1" id="v_x_unit">
                     <option value="1">m/s</option>
                     <option value="0.01">cm/s</option>
@@ -74,7 +74,7 @@
 
             <div class="data">
                 <p class="name">移動速度[Y]/Speed</p>
-                <input type="number" value="0" min="0" class="input-Box" id="v_y" onchange="change()">
+                <input type="number" value="0" min="0" class="input-Box" id="v_y">
                 <select class="unit sp1" id="v_y_unit">
                     <option value="1">m/s</option>
                     <option value="0.01">cm/s</option>
@@ -85,18 +85,20 @@
 
             <div class="data">
                 <p class="name">旋回速度/TurnSpeed</p>
-                <input type="number" value="0" min="0" class="input-Box" id="v_t" onchange="change()">
+                <input type="number" value="0" min="0" class="input-Box" id="v_t" onchange="v_t_change()">
                 <p class="unit nor">°/s</p>
             </div>
 
-            <div class="data">
-                <p class="name">車体幅L/Body width</p>
-                <input type="number" value="0" min="0" class="input-Box" id="widthA" onchange="change()">
-                <select class="unit sp1" id="widthA_unit">
-                    <option value="0.001">mm</option>
-                    <option value="0.01">cm</option>
-                    <option value="1">m</option>
-                </select>
+            <div class="width">
+                <div class="data">
+                    <p class="name" id="widthL_name">車体幅L/Body width</p>
+                    <input type="number" value="0" min="0" class="input-Box" id="widthL">
+                    <select class="unit sp1" id="widthL_unit">
+                        <option value="0.001">mm</option>
+                        <option value="0.01">cm</option>
+                        <option value="1">m</option>
+                    </select>
+                </div>
             </div>
 
             <!-- 計算ボタン -->
