--- a/omni3.html
+++ b/omni3.html
@@ -25,7 +25,7 @@
         <div class="input-collection">
 
             <div class="data">
-                <p class="name">マシン重量/Weight</p>
+                <p class="name" id="weight_name">マシン重量/Weight</p>
                 <input type="number" value="0" min="0" class="input-Box" id="weight">
                 <select class="unit sp1" id="wei_unit">
                     <option value="1">kg</option>
@@ -52,7 +52,7 @@
             </div>
 
             <div class="data">
-                <p class="name">ホイール直径/Diameter</p>
+                <p class="name" id="wheel_name">ホイール直径/Diameter</p>
                 <input type="number" value="0" min="0" class="input-Box" id="wheel">
                 <select class="unit sp1" id="whe_unit">
                     <option value="0.001">mm</option>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="data">
-                <p class="name">移動速度[X]/Speed</p>
+                <p class="name" id="v_x_name">移動速度[X]/Speed</p>
                 <input type="number" value="0" min="0" class="input-Box" id="v_x">
                 <select class="unit sp1" id="v_x_unit">
                     <option value="1">m/s</option>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="data">
-                <p class="name">移動速度[Y]/Speed</p>
+                <p class="name" id="v_y_name">移動速度[Y]/Speed</p>
                 <input type="number" value="0" min="0" class="input-Box" id="v_y">
                 <select class="unit sp1" id="v_y_unit">
                     <option value="1">m/s</option>
@@ -84,7 +84,7 @@
             </div>
 
             <div class="data">
-                <p class="name">旋回速度/TurnSpeed</p>
+                <p class="name" id="v_t_name">旋回速度/TurnSpeed</p>
                 <input type="number" value="0" min="0" class="input-Box" id="v_t" onchange="v_t_change()">
                 <p class="unit nor">°/s</p>
             </div>
@@ -102,9 +102,9 @@
             </div>
 
             <!-- 計算ボタン -->
-            <button class="cal-button" onclick="clickBtn1()">-計算/Calculate-</button>
+            <button class="cal-button" onclick="calculateBtn()">-計算/Calculate-</button>
             <!--リセットボタン-->
-            <button class="cal-button" onclick="clickBtn2()">-リセット/Reset-</button>
+            <button class="cal-button" onclick="ResetBtn()">-リセット/Reset-</button>
             
         </div>
 
